Platform/k8s/ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik-system 
spec:
  gatewayClassName: traefik
  listeners:

  - name: http
    protocol: HTTP
    port: 8000

#  - name: https-fakr
#    protocol: HTTPS
#    port: 8443
#    hostname: yourdomain.com
#    tls:
#      mode: Terminate
#      certificateRefs:
#      - name: secret
#
